--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation 'org.litepal.android:core:1.4.1'
     //添加okhttp开源框架闭包
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    //添加Gson开源数据解析闭包
+    implementation 'com.google.code.gson:gson:2.7'
+    //添加Glide加载方式闭包
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
